[package]
name = "douhua"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8.16"
libc = "0.2.148"
once_cell = "1.18.0"
thiserror = "1.0.48"
nanorand = { version = "0.7.0"}
libnuma-sys = {version = "0.0.4", optional = true}

[dev-dependencies]
crossbeam-queue = "0.3.8"
shuttle = "0.6.1"
rand = "0.8.5"

[features]
pmem = []
numa = ["libnuma-sys"]
sans = []
shard-6 = []
shuttle = []
mock_numa = []
add_delay = []
